--- a/ProyectoGestiónEscolar/CapaPresentacion/Pantalla_carga.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Pantalla_carga.resx
@@ -128,4 +128,10 @@
         AElFTkSuQmCC
 </value>
   </data>
+  <metadata name="Timer_Loader.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>255, 17</value>
+  </metadata>
+  <metadata name="Timer_Fecha_Hora.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>380, 17</value>
+  </metadata>
 </root>
