--- a/ProyectoGestiónEscolar/CapaPresentacion/Inscribir_alumnos.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Inscribir_alumnos.resx
@@ -117,21 +117,76 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Timer_Loader.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>255, 17</value>
-  </metadata>
-  <metadata name="Timer_Fecha_Hora.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>380, 17</value>
+  <metadata name="bunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="bunifuCircleProgressbar1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_borrar2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAANcAAADXCAYAAACJfcS1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADKSURBVHhe7cExAQAAAMKg9U9tDB8gAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC+atM5AAGmPFtmAAAA
-        AElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAj1JREFUaEPtmkFLG1EUhQO1lC4sivgHuqkUuihRJ28mQrauuvIvWLrrzo3FpfgT
+        FLIR3KRQdCeIILTLtgtdlIJddSltJnFjXHR67nAz3Ly8lzhG30R4Bz4M3nfPnENimEhKo6pZq03FYbgV
+        K3UGrkAyBDpzCjb/BMEztilGl0tLswj/U4TLy4/24uIM27kXAuxpgXLTVGqX7dzqt1JPEeBahPkHzsEJ
+        OLJAs1+Aznb3Osny8hO2dafLIHgpQiQtpfZ5NFStMDyQu22l5nh0d/qr1Cs8ve/xGl+zUJchmmH42XDG
+        SHpW7OJ3df1MF8pAWTjWzRQHQRnG8uVRNNco8prj2RVH0TwON8B3sTwuUKYGZeS4/cJT+0ZbGjsoI8ft
+        ly/ggIEFknL5cVytTo8zlJHjDld6q1CtPi8SysBx8gtPWc97fUHUOU5+0bJmVgS+gMnUJb6AyZQ4x83W
+        aoZSh3KOu9MP3Vn6WMzAobZLt+FyLrmfAri5+sLHUiEIfazM5u0oesGjEj2WMzrLo1Tk1TPvxRcwmfoC
+        PErlC9hEy5pZhi8g5AvYRMuaWYYvIOQL2ETLmlmGLyDkC9hEy5pZhi8g5AvYRMuaWYYvIOQL2ETLmlnG
+        gy8AHvZ/JRwyQoFKZcdg6JptjpNfrUplw2DolFYYrnOc/MLygsnUKUFQ5ji3E0w+9Zm64yPHuL3oGyUw
+        oq8ImC5wnxxfRNEkxxhNSa02gT/odzD9BjriIndNB2+rX/HzbbKy8ogvP0Cl0n/E/FEMqGzE6AAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="btn_agregar_encargado.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAA0ZJREFUaEPtmc1rE0EYxuMX+ImKKCp68aKC6CHW7m5aDJidtRarggFFsCcvfhz0
+        KAp6EAXxJHgQRf0vFCkiqIgoehKhYsGKH/3a3SS1p2Z9prytyXaamWxmkx72gR85ZN7nfd/dzczsJJUo
+        UaJEYgWpBR1e99pp0mO51fTN/FQ2yC61fKcb3DE99gb4IKjE8pxhfPaZrn0d7M8H+UUU3jqZBbYDRT0A
+        swpW4Be43TnubCK75qmtdGij6bPHKGCyoqCoTICbu3+zFWQfrwzX7kFCt6IAXQxkPHsvpYlHpm9fRaJy
+        KLFOJpDjJKXTK/zw7goSxkEZTZyjtHpkePZlQaI4mcQFO0bpG5PpsqMwjPOxmYuJDtfZQ2VE077CgXUw
+        +hMyluOy1/h8XonhsU9T39XHB6wxi6mc+gWDhyFDJTKFg9vJYkaW6xwRjZWBWe8SWdQna4ztgkGkR0dn
+        A8DLutk1ZKMuBPIVVmQoRXMDuAvsItmoKTPcswqBpbCRKrobAJ/JRk2Wx44LTJSJoYHAKOZ2kpVcaOCe
+        yESVOBowfec8WcllevY7oYki8TTAnpCVRHgZQUDN7THu0PsOL7dtLtJBegm5zSj98/By0dhp4DsWzhPi
+        LVnVVnYou1IQXI3LXtFwbaIXHnE+gIv2nYbW1tReX2BQRQsaAC4Nra3OYtd6QXA1rWlghIbWljloLhME
+        V9OaBgZoqFwKZl8wU+Xngi+EZDWjzLC9WTT2P6wQyhHmJVnJxa+wwECZWBYyj90nK7nwAnNLZKJKLOuA
+        65wmK7ksz2ZCE0ViaKDcPtq1hawUFFxbiKDBkIkyMTTQRzbqwg/5hsBICd0NGD47RTbqsopsA4LHw2Yq
+        aG7ga+TXSstnVwSGUrQ20MjpBC1q/bNM5fDNIN+cVVIEorG1eEalRBe9G0d6lBrkB9/WUBmNiR/3wVDH
+        Qa4qpYyfMyi9HmFWOgPjZjRRaveYTWn1iu7E31BCnQyZBWZRunjEfxMRT9kkOE+b9mcHn5exuFxA4vqP
+        HWfTz09ByLq54tMs1oqzKOJjqCgZZWyhXyD2xLz4r4yLn9vwc33Ldx7Rdvwb4PP/COBrSR/fEhsu620b
+        ZVspLFGiRJGVSv0Dqsua3E57WbYAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bnt_borrar1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAhpJREFUaEPtmrtKA0EYhQMqYqEo4gvYKIKFrElmlsC26ax8BcXOzkaxlDyCgo1g
+        E0G0E0QIxFIttBBBG1sv2aQyFolnkj/JuLu57CaZjTIfHBx35j85Z3MhiJFuyVnWpM15ymbsIcfYF9bl
+        VqIz9/i59x6LTZBNOBQSiZkc50/OkJ0KJR7z0eg02akH4Y+9gvkRShyRnVpeGRtDge96EM5LCPOMdQbr
+        Sy9V9hh7wbokzRVLyeQo2aqjEIst1EJUxNgZbbUF58/l2QLn87TVOz4YW8Td2sQd2vKSbZqHcghcyzrP
+        tFBWnhVeHmeqQgaRhWJ1hh2PGxiuvzzClsgCLVG85uBOLGMgjZfDndMkdFUzpUVGiuvm0zRXXIMDJpGR
+        4rrRBRSoZYGyYYzYicTUIEtkpLjtEV8VMDQbpkQGiuMfvPN/fdaHImSgOP7RBXohXcDLVKX6VYC+Oq/V
+        hN8vanukHXGdJNbyrDgrzwovebahvhXg/JqOVcC1lLyfN8052oqItbwHpWirgvBy7DekC3iZQrqAhC7Q
+        DF2A0AWCogsQukBQdAFCFwiKLkDoAkHRBQhdICj/u8Bf/6uEMnVZ4MDTVKHw7OxTHP+gwK6XqWJtUxz/
+        YDjqMFOveNygOMGAyanLVJUYO6EYwRH/UQKzjMu832Ls6s00xylGd5QtaxhP5QaMb/GZXXQ9WI9E3jcI
+        v15eXR2ih29BJPIDvHJOxxiF4NsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btn_guardar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAo9JREFUaEPtmN1r02AUh3sr+j95ZeNWZRd+IQ4VkQ3US2+8mhfVpq0fbNpJYZYq
+        Xk0ZQ9SJoAaFvNmWdbPOKV3rcHXVIhRl07UDd3xPPlgWwkyavUkY+cFDIG3P+T2lJCWRMEFJNCH1RHky
+        /F8SYlWF/OAS4go9/mkbntT0eRxPPtJj5vB1cZdWyVk4Xsyezs5A/HFlS+gihY6UBOcflODicMU1Z4Zm
+        4cjAFEVuxlLkVVsSKIAFF36ubwmWj6XH4fKTKjwrr28LyRff4exQEd7VWnBisLDakZSkvX2v92jV7MWJ
+        wIFr48pSqzLtoAvg/LYlvBDAz+g/QfN5XQCZXmrC8cxUszNFiG2JIAkgjiWCJoA4kgiiAGJbIqgCiCJx
+        W251piVxX3pmt1Z5c4IsgOgSsbQkWN4ngi6AyNVVODogt2hXXqu9ES8ERubWID+5rGA8b1cAwY7YVau9
+        EbsCB2l5vBPHx5Y2lXDDFTrrXH7Wcp8Z1wKXHpaAS0rQdXMSro7VlG/PDTjjUL8MWeGr5T4zrgU+1Nfo
+        kM9w7JYMXTcmXIF/Hntz7yHzsgrlxl/LfWZcC/hNKOA3oYDfOBIQF36DML/sK9jB2MmRQM/dIn2zeuv3
+        C+xg7ORIoDdXhKfTdfAruBs7GDuFAl4mFLASqP9qQunbChNwtjFMBE7eKdAB1lcMt5yis41hIuBlQoEd
+        KUDmG8o5FkjlhrZFDZ7bdoG+R5/gQr7IBJxtDBMBLxMK7EiBnPAF4qMlJuSERW2LGiYC994sQv/zChPu
+        v61qW9QwEfAyoUAo4DKOBboHC8rDWx18/ol3SKsrhhfgbuxg7IQdLQX2J0g3vmAkypMJLinO+YnSwdQL
+        u2q1w/icSOQf0IR8d8w6EUwAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
