--- a/ProyectoGestiónEscolar/CapaPresentacion/Menu_Empleados.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Menu_Empleados.resx
@@ -117,4 +117,100 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Btn_All_Users.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgESURBVHhe7Vp9UBTnGcd2pu00TZs20xaSdjL9SPtf25lO
+        UpN2nMZoG3U0fiQOJKahEKtpJq011iOdzjTN1Gm1wkRbbYQYQGrNoJGIBAUuIB+iwu3e8RExCMfuAVIC
+        IXe3ewcccE+fd31v2bt7gdtz96Qz95v5DXfvvfs+v+e3z7777vKmJJFEEkkkkUQS/7cYLE/77Jj13u+R
+        z+7qr252W1O7PNZU0WNNexUgZYnSaTHgcvfo53lRWsm7vL/mBTkPPx/lRLmUkHzGtlxe9D5P+pC+9LAF
+        4am55yFPTWoV/v2OuyYtgIlDiPj9adrt9qCt3/c1TpAtmFQzL0hTvChDTMS+nChdxGN3212+e+lw88Jr
+        TcvWJk8NKKQ/Jxa2Pt9STKKcE6QZZoJ6KEjTOM47aMSDdHgmPNVfWRppAFbGTvpzYuAQxr+BZ/ssMxED
+        SIzgnP77aLgoeGrS/uK2ps3Qs/8u1N33GfqTuQCAJViyO/Fs+VnCDaUg+ZC/ITFp+DCMNN19p7cy9cv0
+        q/nodLm/hMlXMsWaSulsu+j+IpVxe8C53N/G5J1sgQmgIPe0iu5vUTlhsBTaf2op5D+wFPF7aZOxIDM8
+        ngWBJazeLkDevn/Any1/hFd2/8FQ5u07CJX1bWosPAF9rDtFThG/L6fIDmjCAG0yDlcGPHdj8KshEVqe
+        b+qEp1Ysh/z9e6C2ohTqK982lKePHYHstavhtdxDaky8XXZGXg67Cq+kogn/3F3Er6JN+pFTzD+LLh7/
+        /Zv8/bQppRTgkxjwgjZpLXf8IhOa3yuHmekx0+iXh+CFzZugopabjS1I53Fi/ASVaQxyCvlhUkbI/bQp
+        RZntNQlr2dIzBltWPMoUbRRH/9ujVMJey+/g4IH8sPh4m3yRyjQGWEK7MPlLLxdxylq7zen5LhowoQ2q
+        ZVP7AGxdv5YpvLrsOFiyn1H570O5Svu5k8fC2hdi5mMr4JlVjynzwakzdeEa8DbcIo5/UxFvBjD5irCA
+        EZzPAMndDwNCh8qPR5xKu9ftCmtfiIf/+gqe+QJm/JuUTlO5xsImen/CDjjL+QwwiiWH8uDw4eKo2NeH
+        x2FUmrr5XfA8TGUbByyvM5FBI9nY3g+/2rBOFdt7rRW4pmomb4jvK326378S1t7eekFpHxm6rrbxF6th
+        euqjeQ1o7/fBtSE//W5wFbQM+L8ey4NNpAFmcC4DtCRaY32KjAm44trFChTJBsWAx5nCjWIsBhDaRGkH
+        lX/r4ES5iRUkkpEGtLXUhS1imq3lSik3VZeFtS/EhvOnYTowqssAslah8m8NncPDn8NrKsAKEsnFVAF4
+        x5p0DAXvoGnED87lXcYKwGJ9mwu2bVyviuUaz0L9uyVR9Iz1qX3sl2qYZ13LeCqA0C54f0zTiB+c6NvG
+        GpzFSAMaKw9A0F8azfEq/P1DtZ8e6jEA567naBrxA0vp78zBGWxwiLB94wZV7JwGIC9WFYYlFit1GSBK
+        f6NpxA80oIA9eDT1GNB47g2lj5mXAGrPp2nEDyyjE6zBWSTvAfQaoJc6L4ETNI34gYO8FRqQLDev3git
+        tqJJDHh+00ZVbCwGiD0OuNbRPC8/6Li04EqQSSMMCF0CQ54APm4DBJGzS85wKgY8oc8A2TOAdwVxQYbG
+        1GeAdISmET9Ck6DbP60YQCCMTjADXuD74LnH1+gyQC8TPgnaBXkrGawLS987Pg0fyVPgcM0GqajjofSd
+        WoX5+f+BtT/8gSq26u3Xob7iX0xerj2p9DF1EuyTs2ga8WOhhVDGI8vwbOYqrDq1BzJ/vkw1wAzqMcCQ
+        hVCfveyuq86uiTZhhBkka83P1LJ2DxXB9vXLVbGjw73MlxpaDoqdSt8uRwPUnsnD6jgQxbLiPcqLE10G
+        CJK/uzv4aZpGfAjwmx8IcOk3prgMmOQzwdkd8QoKmbV6bgNimeEJA5Mj0HLhDIyPHVfH0rK9+TX1DZKO
+        CrDSNOLHFJd+iSQf4gSaYBfdYYGy1qxUhUYaoIdGG2DI43CAyxjSGkDY0TcYFuiXq+Y2IPJxmMlzp02o
+        AHx6veG99f8PYsL52uS9bS9HBZvPAD002ABjXokFHVvuwMvgELLLz2+1tjtdQYdzEAaubMcZ1qMEy1y9
+        uAzgBCnIO+Xv0xSMBS6KKuzCGFzvmBWgNeBDoQBefGKlmpSeS+DjkR6YmWiH0cEyqD+7N4wlB1/SUQEm
+        vRYnuPlyVJa0AZ9esRyTPwXXHQdh69plUH7MohpgBhcwwN0qyGlUrjkgs6s2aPa6dSCNvqeUL6mA4HgZ
+        U7hRfH3vq3C06JQ2aZU2QXqByjQXGKwkFLSg4Djs2JIO/b2NMDPZAcHAzYWNGRwb6YWnHn0E6my9Ucnj
+        tV9M5ZkPso0N5wNHKPgbR9+CbU8+CRuWPmgqNz28FN4sKo1OXpR4obUkbcqWnou37m1UprngRN89GLgv
+        UkyiiRqc5Lqf5NKzyK06YMsIgv3Zu6hMc0E2SsT6PwNTKMgNZI8S0TLBZ9w/ZctoQwNOJnSHaFPXyJ1o
+        wkmmQDMpyCcMee9vBABgCd5/f0uewJhijaQg+RI22+vF7d4ouWhwO7bKJh5Y9pZC/qWcYsdO8pm2hkHd
+        LC3IjVgZ48wEmcS+OMHhsTFvlk44coq5h+gGKsg55vgRbZ4T5O0MOYuYWDZOmvsxybDt8qSNvMPjXb4H
+        OjvhU/SwxQvLEdsXsAIuk01Ufyq5HPP+/iSSSCKJJJJIYpEgJeV/YqXm21UAVFYAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Btn_Crear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAtySURBVHhe7Vp5VFNXGqcz58zMmU5n65kZaWdOzyyd+WOm
+        02W0RYSIgFqsWmUrKAVK2AlrkFUJqywC1RaK7CQpoKBUQS0KWgfcEXelohBAq7WtFOrY2gTym3ufDyYv
+        eWCIAZ1z8jvnd/Ly5eV+3++7311ecs1MMMEEE0wwwYT/W3zWaP7TwdZn/0mvh/b9znWodVbXcOus/uFW
+        81TA7AnmpscB6m75z1X9soUjCmmwqk+ar+qTlY8oZHWU9Jowj1wH0XvovezXHojhlmfmDrfM2kte/zrU
+        Yq4kwjFG8n41e9ujgfqa/PcjfbJYwiMqhVRFXqEPmXsV0sPkOkY9UPUs29yk+KbVXKgpnk1AJfvxzEKp
+        kFsQAY0qhWxUW9xUSZIxQl53KHuqXmWb58Xwvt9aaCeAVEYU+/HMQN0n+yMp4yZtEUbkDnXvh8+x7nQw
+        3GKePtRqPsr2/m588txP2I+mFwCeID0eRXrrW56gjUpSVXfJaxj1ybrn4MtDTz/1zZ5Zv2HfTj/UA6W/
+        JgHt0QxyRkgqDf3Vv2LDeDRQD8j+Qnq9lzfAGSCphqvq/qo/s+Fw8PV8J5tBgdPlQWunbNZkXNAZnixn
+        fXyBzSTJ8qngWymI+JxBgTNIAq6zJuNBfV36NHF8aSyInQWhcLN6Gavnv2IQVwlewYmPUnTE6U2F7IL2
+        cLg132XWbYFzwW2BkwNrmjpI9rxuWztVDwscn2dNZMKr+yFxelAzgIA35qH3hBu+UXgaxPbtbyI9aDlX
+        1NTZDEh+wIZpHJAM3mLLKJc1mdHZXtt5YfwqCF+fjRAXS4SuspkSg50s4Gn3L+zaHMFp0zBKQ9kwjQPS
+        +9GD1s5HB62cmL22ulf+N1L697Qdk4kQFWlC+MclQNL8yZTo4+OFlsoYTnuGki7DZCj8iQl+OkB6fxef
+        Y8r6jSKEpGUiq7MLWR0XId5cAXFROYfRpTJknryEWFkd4rd8xNg8XJxxtF7C26aBbGDDNS6U/VIrHmfj
+        5CRgCgwIDsTx7clMG/d6qtDblo9Le7Nxo6NAx8dkHP28Beo7V5hrZZ/Mkg3beCC9v1PbqSYfJgGtVTHI
+        CXJE6tsOKAxagfIwJ6R7OiDebRE6tulZHdfqMHpzz9h741aB+krFHx70YGNoAny9PRDnZIuj+QG4UhHJ
+        4aWSMCYhtZl+vD4nIo1V36dIvUAajdZ2ok3NBNDJLVDogyBfIdZ+9DFjS2vvhL9QiGA/X8TLtownQLhI
+        gIsl4TriNZnruwxXDmzg9TshFdIINvyHB9loHOJ1okHNBMTVNGBHrRSH9jVBXFzJ2JL3tqEwNwvdFzog
+        zsplbJJd+5HlvZRXtCYP5wWgfJ0Xr99JeJAN/+GAW3U/I0ufkscBh9oJkBW9hyaSBM0EZCcl4uj+PeMJ
+        iK9tQHGoM69oTdIKySX38fmdiGSb/r36puxJVobhUPZWCfgcaFMzAan7j2DN+izEZGYzw4HaMo6cQTRr
+        S2KHRVx1PUrDnNH5XhBKg1aiOPBNHH83kBFdK36L2FagIW4VukrDkR3syOt3Mir7KuexMgzHSG9VAF/j
+        2tRMQObx80jcvptwF9YfO8vY6N4gseFjxpZxqBOpLW0IjYpESagjI7g5hWyI0t/h9HxttCsul0cSRkC0
+        VIDTjam8viem3JeVYTjI7moDf+NcaiaAlnaKOAK5SQmILqlibMn72hHl+w6K87PJENgAv+WLUBfvinqy
+        jaZit8W6oynp7XHxVHi660JcLotg3peKHJHl9TpONNzfM+hDEnsWK8NwkEZK+RrX5lQnQdHbrmhOXYVG
+        DdGTsSJsBSrFzjjdlMbrn49kOSxhZRgOMpnU8jWuTc0EJNQ3QrhyBQLfcsGaig8ZW0rrYXgseR1hXh4Q
+        525EYHAQOsjYb0715gg994EI54pC0U3KXtPeJPFEqpcDvu2u4PXPRxo7K8NwkBVgy/0G5Ri91YrRzxp1
+        HFFqJkAf0jkiwHU5yoJXcoTSkj9bKOLayHCIc7RDVZovr++JaJwEsENAPXQO96HG6I3dOs40E5C0+wDC
+        QkIQIQphhFJbettJBAcGISo8HPFVNYyNVoqX5WxGJF0BPOe8hExvF5RGCRGyYC4iF8/DkTx/VEe5In7V
+        Yh2fDyKJvZiVYTjGJkH13QE2AcDol4d0nE11DqA2SudXXkLssvlY+Y+/I36JFd5bbIfKZcuQsdQKLi++
+        AD/rOXAniWkpW6Pj80E0yiQ40if1o42N3miC+rub5InrKkb6q3WcaSeg7N0c1Fds5iQgIy4a+xvrOQnw
+        eMOBEU8psp2LrZGuqAlxRHnwCji+cN/uPvsl3L2s/9gfp0Lqw8owHAZthD45BnFGFrPxocKpbf2xM4jK
+        yGZsSTubxxPg5+9Levjl8STwsSbDn9fng2iUjRBOS36p6im8N6Io53UyxqlOgmP0DwpAJtkMjfW2Nn0W
+        WOD2uWJen5ORlP+36u5NP76vwkAoT7nOUXa63VB1ukN1ygMj3dm8ziinmgBJw06EBbpC6PQagqOtkU+W
+        P7Hz0nHhHhazkSMRITx5MQI9LBDnbY/DWxOh6pXy+tehQtrKyjAcqk63o4z4MdIk9FXpOiPUNwGShh0Q
+        utogRGSB5PIFSN9qh/BN1thQLUR/36foPHYA7Qe24crlc6j+OJP5TCK3R1qNPSJiLMnSaYGNcS74z6eT
+        V6RRHoeVne43OQkgHOkt5XWoTwLofOC1ci4yau2Q1bCQYUqNHSILBYgtWsQk4Oq1GnQN5KC/vwsfNEQi
+        utAOEtmi8fspEzbNR9w7i3jjoKRPr+ru8of/f5AILuEk4Gwgr0NKmoDylHwczq7AhxESdOTLsTNhA3P9
+        7/Ul2JdSgDjXN5FQMJ8jhjJz20KsKbLFwPXzuPX1Hly9sRFDQ9dIhaxA2pb/JUuTwZ6WuNNVxhsLoXF+
+        ElOf8XiSDINCwi7lKc9WVU+xmhB3jy8hJcYdCjQBO5M34et1xRMyZqU9I1ZbTFzZAqbUz1/di+tf1eDS
+        tSQM3+lFxCZSGZvtkbVd9zuhQZa4ceJ9TgyUZPJTf98re5GVYFyQcbVrRFGJe+fDdBzrk4AIR93ep0yS
+        2zIJaDr8Pga+kOLiwFpc6NnH2NZVcst/jOHhlug5mKcTB+H0/CxOcf/HUekdHqd6JSCKVACfmKwGezIE
+        bFC4PQT9X1SSCpBgz9EPIC6wxfp6/u9ExVjhQvN6Tgxk7z+k7pObs+FOD+jsqul0jDQBEQ5LsNFDOCG9
+        37DgFUOZSibGmKKF6LtVjk+vp5NkiJAk47+XUiyxRofuH6ohbJjTC/KcLddyzDymDp7dPClLyaOvyFuA
+        5Eo7ZPD07LpKB3RcziEJILvF8uVk7HPv0fxOxNp5aKtZO+6fVKaUDW/6QY+xkWeEM5oJ0JcDRzZhrd9S
+        iAIFSNpswxGYXmePhvYwtJ1PxPqtSzmfUUqqbBGfQSZM7wV4P3E1hi6OL8mn1B3p5qqTbnlk6Q5gw5xe
+        qPtrniHrrUJT3FTY05aHjbHuCHYVQCxagPgkWyS+a4OKrf7YsiMMiWS5pEtmfLYNYmPtEOFtiwT/Jdgv
+        i+Msf6Tne+m4/77TzYcu1cqT7mqc9volG+b0gh6U0Oc/gwfx85MFaK9di6aiSFTnBUKW4w85YU1uACP4
+        6sFc/i2wQtpGzyjRWO6dcn9eddL9LElA/YyeEFV3lT1FklCvE9w0k/7aY5Tf/Y0B0GNy/fJw+gTGF6wx
+        SSZgekxuZmb7qeJRH5R8bPAojsrOOGBm9sRtgbOYMIpes2YOxg9LK2TtZMX4TlPYZGTuJRMcudb7sPSM
+        gwifyxygIvzKyuk11jwh6K8ztBeJKCERmEuofVw+l4j2UQ7I5+BC3Y/Yrz2+GLR3+QURf4weovrq1dV6
+        n+83wQQTTDDBBBMeE5iZ/RcYWwqZ7i31hgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
