--- a/ProyectoGestiónEscolar/CapaPresentacion/Ingresar_Alumno.resx
+++ b/ProyectoGestiónEscolar/CapaPresentacion/Ingresar_Alumno.resx
@@ -172,7 +172,7 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <data name="bunifuImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_nuevo_encargado.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAA0ZJREFUaEPtmc1rE0EYxuMX+ImKKCp68aKC6CHW7m5aDJidtRarggFFsCcvfhz0
